Added validation for feedback data

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@octokit/auth-app": "^3.4.0",
     "@octokit/auth-oauth-app": "^4.1.2",
     "@octokit/rest": "^18.5.3",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "discord-botkit": "^0.0.2",
     "discord.js": "^12.5.3",
     "discord.js-commando": "^0.12.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.6.0",
     "uuid": "^8.3.2"
   },
