--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^5.2.6",
     "pg": "^8.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/uuid": "^8.3.0",
     "typescript": "^4.2.4"
   }
