--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@octokit/rest": "^18.5.3",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
+    "debug": "^4.3.1",
     "discord-botkit": "^0.0.2",
     "discord.js": "^12.5.3",
     "discord.js-commando": "^0.12.3",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/express-rate-limit": "^5.1.1",
     "@types/uuid": "^8.3.0",
